Rebrand to Diagnis AI Lab

--- a/ai-quiz-tr.html
+++ b/ai-quiz-tr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI IQ Testi - Yapay Zeka Hakkında Ne Kadar Biliyorsun? | Diagnis Research Labs</title>
+    <title>AI IQ Testi - Yapay Zeka Hakkında Ne Kadar Biliyorsun? | Diagnis AI Lab</title>
     <meta name="description" content="20 soruyla yapay zeka bilgini test et. Başlangıçtan uzmanlığa - startup dünyasında hangi rolsün?">
     <meta property="og:title" content="AI IQ Testi - Startup Rolün Ne?">
     <meta property="og:description" content="AI IQ Testini çözdüm! Sen kaç puan alabilirsin?">
