--- a/ai-quiz.html
+++ b/ai-quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI IQ Test - How Much Do You Know About AI? | Diagnis Research Labs</title>
+    <title>AI IQ Test - How Much Do You Know About AI? | Diagnis AI Lab</title>
     <meta name="description" content="Test your artificial intelligence knowledge with 20 questions from basic to expert level. Are you a Goldfish or Demis Hassabis?">
     <meta property="og:title" content="AI IQ Test - How Much Do You Know About AI?">
     <meta property="og:description" content="I just took the AI IQ Test! Can you beat my score?">
