--- a/careers-tr.html
+++ b/careers-tr.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kariyer – Ekibimize Katılın | Diagnis Research Labs</title>
-    <meta name="description" content="Diagnis Research Labs'e katılın. Tıbbi araştırma için yapay zeka geliştirmek üzere Veri Bilimcileri, ML Mühendisleri, Araştırma Asistanları ve Frontend Geliştiriciler arıyoruz.">
+    <title>Kariyer – Ekibimize Katılın | Diagnis AI Lab</title>
+    <meta name="description" content="Diagnis AI Lab'e katılın. Tıbbi araştırma için yapay zeka geliştirmek üzere Veri Bilimcileri, ML Mühendisleri, Araştırma Asistanları ve Frontend Geliştiriciler arıyoruz.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -761,7 +761,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
@@ -1075,7 +1075,7 @@
                             </div>
                             <div class="form-group full-width">
                                 <label class="form-label" for="message">Kendinizi tanıtın</label>
-                                <textarea id="message" name="message" class="form-textarea" placeholder="Diagnis Research Labs'e katılmak neden ilginizi çekiyor? Ne tür ilgili deneyimleriniz var?" required></textarea>
+                                <textarea id="message" name="message" class="form-textarea" placeholder="Diagnis AI Lab'e katılmak neden ilginizi çekiyor? Ne tür ilgili deneyimleriniz var?" required></textarea>
                             </div>
                             <div class="form-group full-width">
                                 <label class="form-label">CV Yükle <span>(isteğe bağlı)</span></label>
@@ -1102,7 +1102,7 @@
                             </svg>
                         </div>
                         <h3>Başvuru Alındı!</h3>
-                        <p>Diagnis Research Labs'e ilginiz için teşekkür ederiz.<br>Başvurunuzu inceleyip en kısa sürede size döneceğiz.<br><br>Bu arada bize <a href="mailto:careers@diagnis.ai">careers@diagnis.ai</a> adresinden ulaşabilirsiniz.</p>
+                        <p>Diagnis AI Lab'e ilginiz için teşekkür ederiz.<br>Başvurunuzu inceleyip en kısa sürede size döneceğiz.<br><br>Bu arada bize <a href="mailto:careers@diagnis.ai">careers@diagnis.ai</a> adresinden ulaşabilirsiniz.</p>
                     </div>
                 </div>
             </div>
@@ -1111,7 +1111,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümüdür<br>
+            <strong>Diagnis AI Lab</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümüdür<br>
             © 2026 Diagnis. Tüm hakları saklıdır.
         </p>
     </footer>
