--- a/careers.html
+++ b/careers.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Careers – Join Our Team | Diagnis Research Labs</title>
-    <meta name="description" content="Join Diagnis Research Labs. We're looking for Data Scientists, ML Engineers, Research Assistants, and Frontend Developers to build AI for medical research.">
+    <title>Careers – Join Our Team | Diagnis AI Lab</title>
+    <meta name="description" content="Join Diagnis AI Lab. We're looking for Data Scientists, ML Engineers, Research Assistants, and Frontend Developers to build AI for medical research.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -761,7 +761,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
@@ -1075,7 +1075,7 @@
                             </div>
                             <div class="form-group full-width">
                                 <label class="form-label" for="message">Tell us about yourself</label>
-                                <textarea id="message" name="message" class="form-textarea" placeholder="Why are you interested in joining Diagnis Research Labs? What relevant experience do you have?" required></textarea>
+                                <textarea id="message" name="message" class="form-textarea" placeholder="Why are you interested in joining Diagnis AI Lab? What relevant experience do you have?" required></textarea>
                             </div>
                             <div class="form-group full-width">
                                 <label class="form-label">Upload CV <span>(optional)</span></label>
@@ -1102,7 +1102,7 @@
                             </svg>
                         </div>
                         <h3>Application Received!</h3>
-                        <p>Thank you for your interest in joining Diagnis Research Labs.<br>We'll review your application and get back to you soon.<br><br>In the meantime, feel free to email us at <a href="mailto:careers@diagnis.ai">careers@diagnis.ai</a></p>
+                        <p>Thank you for your interest in joining Diagnis AI Lab.<br>We'll review your application and get back to you soon.<br><br>In the meantime, feel free to email us at <a href="mailto:careers@diagnis.ai">careers@diagnis.ai</a></p>
                     </div>
                 </div>
             </div>
@@ -1111,7 +1111,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
+            <strong>Diagnis AI Lab</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
             © 2026 Diagnis. All rights reserved.
         </p>
     </footer>
