--- a/case-study-tr.html
+++ b/case-study-tr.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaka Çalışması: Dr. Ayşe Yılmaz – Diagnis Research Labs</title>
-    <meta name="description" content="Bir gastroenteroloji araştırmacısı, Diagnis Research Labs ile sadece 2 haftada erken mide lezyonlarını tespit eden bir AI nasıl geliştirdi.">
+    <title>Vaka Çalışması: Dr. Ayşe Yılmaz – Diagnis AI Lab</title>
+    <meta name="description" content="Bir gastroenteroloji araştırmacısı, Diagnis AI Lab ile sadece 2 haftada erken mide lezyonlarını tespit eden bir AI nasıl geliştirdi.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -758,7 +758,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="tr.html" class="nav-link">Ana Sayfa</a>
@@ -1251,7 +1251,7 @@
             <div class="testimonial-inner">
                 <div class="testimonial-card">
                     <p class="testimonial-quote">
-                        Diagnis Research Labs ile çalışmak, araştırma kariyerim için verdiğim en iyi karardı. 
+                        Diagnis AI Lab ile çalışmak, araştırma kariyerim için verdiğim en iyi karardı. 
                         AI kullanma hayalimi gerçeğe dönüştürdüler — hayal ettiğimden çok daha hızlı ve uygun fiyatla.
                     </p>
                     <div class="testimonial-author">
