--- a/case-study.html
+++ b/case-study.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Study: Dr. Ayşe Yılmaz – Diagnis Research Labs</title>
-    <meta name="description" content="How a gastroenterology researcher built an AI to detect early gastric lesions in just 2 weeks with Diagnis Research Labs.">
+    <title>Case Study: Dr. Ayşe Yılmaz – Diagnis AI Lab</title>
+    <meta name="description" content="How a gastroenterology researcher built an AI to detect early gastric lesions in just 2 weeks with Diagnis AI Lab.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -758,7 +758,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="index.html" class="nav-link">Home</a>
@@ -1253,7 +1253,7 @@
             <div class="testimonial-inner">
                 <div class="testimonial-card">
                     <p class="testimonial-quote">
-                        Working with Diagnis Research Labs was the best decision I made for my research career. 
+                        Working with Diagnis AI Lab was the best decision I made for my research career. 
                         They turned my dream of using AI into reality — faster and more affordably than I ever imagined.
                     </p>
                     <div class="testimonial-author">
