--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diagnis Research Labs – Custom AI for Academic Research</title>
+    <title>Diagnis AI Lab – Custom AI for Academic Research</title>
     <meta name="description" content="World-class medical AI expertise at academic-friendly pricing. Custom AI model development for researchers.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -980,7 +980,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
@@ -1249,12 +1249,12 @@
                 <div class="section-header">
                     <div class="section-label">Compare</div>
                     <h2 class="section-title">Us vs Traditional Consulting</h2>
-                    <p class="section-subtitle">See why researchers choose Diagnis Research Labs.</p>
+                    <p class="section-subtitle">See why researchers choose Diagnis AI Lab.</p>
                 </div>
                 <div class="comparison-grid">
                     <div class="comparison-col highlight">
                         <div class="comparison-header">
-                            <span class="comparison-badge ours">Diagnis Research Labs</span>
+                            <span class="comparison-badge ours">Diagnis AI Lab</span>
                         </div>
                         <ul class="comparison-list">
                             <li class="comparison-item">
@@ -1421,7 +1421,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
+            <strong>Diagnis AI Lab</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
             © 2026 Diagnis. All rights reserved.
         </p>
     </footer>
