--- a/mistakes.html
+++ b/mistakes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Araştırmalarında 10 Kritik Hata – Diagnis Research Labs</title>
+    <title>AI Araştırmalarında 10 Kritik Hata – Diagnis AI Lab</title>
     <meta name="description" content="AI araştırmalarında en sık yapılan 10 hata ve bunlardan nasıl kaçınılacağı. Araştırmacılar için interaktif rehber.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -577,7 +577,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
@@ -1112,7 +1112,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
+            <strong>Diagnis AI Lab</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
             © 2026 Diagnis. All rights reserved.
         </p>
     </footer>
