--- a/research-finder.html
+++ b/research-finder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PubMed AI Research Finder – Diagnis Research Labs</title>
+    <title>PubMed AI Research Finder – Diagnis AI Lab</title>
     <meta name="description" content="Find recent AI and machine learning research articles in your medical field. Search PubMed for the latest AI-powered studies.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -589,7 +589,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
@@ -698,7 +698,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
+            <strong>Diagnis AI Lab</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
             © 2026 Diagnis. All rights reserved.
         </p>
     </footer>
