--- a/team-tr.html
+++ b/team-tr.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekibimiz & Araştırmalar | Diagnis Research Labs</title>
-    <meta name="description" content="Diagnis Research Labs ekibiyle tanışın. Araştırmacılarımız tıbbi yapay zeka, endoskopi ve klinik karar destek sistemlerinde çok sayıda yayın yapmıştır.">
+    <title>Ekibimiz & Araştırmalar | Diagnis AI Lab</title>
+    <meta name="description" content="Diagnis AI Lab ekibiyle tanışın. Araştırmacılarımız tıbbi yapay zeka, endoskopi ve klinik karar destek sistemlerinde çok sayıda yayın yapmıştır.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -542,7 +542,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="tr.html" class="nav-link">Ana Sayfa</a>
@@ -567,7 +567,7 @@
                     30+ Hakemli Yayın
                 </div>
                 <h1>Ekibimiz & <span class="gradient-text">Araştırmalar</span></h1>
-                <p class="hero-description">Diagnis Research Labs arkasındaki araştırmacılarla tanışın. Tıbbi yapay zeka alanında toplam 30+ hakemli yayın.</p>
+                <p class="hero-description">Diagnis AI Lab arkasındaki araştırmacılarla tanışın. Tıbbi yapay zeka alanında toplam 30+ hakemli yayın.</p>
             </div>
         </section>
 
@@ -777,7 +777,7 @@
 
     <!-- Footer -->
     <footer>
-        <p class="footer-text"><strong>Diagnis Research Labs</strong> — <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü</p>
+        <p class="footer-text"><strong>Diagnis AI Lab</strong> — <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü</p>
         <p class="footer-text" style="margin-top: 8px;">© 2026 Diagnis. Tüm hakları saklıdır.</p>
     </footer>
 
