--- a/team.html
+++ b/team.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team & Research | Diagnis Research Labs</title>
-    <meta name="description" content="Meet the team behind Diagnis Research Labs. Our researchers have published extensively in medical AI, endoscopy, and clinical decision support.">
+    <title>Our Team & Research | Diagnis AI Lab</title>
+    <meta name="description" content="Meet the team behind Diagnis AI Lab. Our researchers have published extensively in medical AI, endoscopy, and clinical decision support.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -509,7 +509,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
@@ -529,7 +529,7 @@
         <section class="page-hero visible">
             <div class="page-hero-content">
                 <h1>Our <span class="gradient-text">Team</span> & Research</h1>
-                <p>Meet the researchers behind Diagnis Research Labs. Combined 30+ peer-reviewed publications in medical AI.</p>
+                <p>Meet the researchers behind Diagnis AI Lab. Combined 30+ peer-reviewed publications in medical AI.</p>
             </div>
         </section>
 
@@ -739,7 +739,7 @@
 
     <!-- Footer -->
     <footer>
-        <p class="footer-text"><strong>Diagnis Research Labs</strong> — A Division of <a href="https://diagnis.ai">Diagnis Medical AI</a></p>
+        <p class="footer-text"><strong>Diagnis AI Lab</strong> — A Division of <a href="https://diagnis.ai">Diagnis Medical AI</a></p>
         <p class="footer-text" style="margin-top: 8px;">© 2026 Diagnis. All rights reserved.</p>
     </footer>
 
