--- a/tr.html
+++ b/tr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diagnis Research Labs – Akademik Araştırma için Özel Yapay Zeka</title>
+    <title>Diagnis AI Lab – Akademik Araştırma için Özel Yapay Zeka</title>
     <meta name="description" content="Dünya standartlarında tıbbi yapay zeka uzmanlığı, akademik bütçelere uygun fiyatlarla. Araştırmacılar için özel AI model geliştirme.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -996,7 +996,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
@@ -1265,12 +1265,12 @@
                 <div class="section-header">
                     <div class="section-label">Karşılaştır</div>
                     <h2 class="section-title">Biz vs Geleneksel Danışmanlık</h2>
-                    <p class="section-subtitle">Araştırmacıların neden Diagnis Research Labs'ı seçtiğini görün.</p>
+                    <p class="section-subtitle">Araştırmacıların neden Diagnis AI Lab'ı seçtiğini görün.</p>
                 </div>
                 <div class="comparison-grid">
                     <div class="comparison-col highlight">
                         <div class="comparison-header">
-                            <span class="comparison-badge ours">Diagnis Research Labs</span>
+                            <span class="comparison-badge ours">Diagnis AI Lab</span>
                         </div>
                         <ul class="comparison-list">
                             <li class="comparison-item">
@@ -1437,7 +1437,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
+            <strong>Diagnis AI Lab</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
             © 2026 Diagnis. Tüm hakları saklıdır.
         </p>
     </footer>
