--- a/calculator-tr.html
+++ b/calculator-tr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Örneklem Boyutu Hesaplayıcı – Diagnis Research Labs</title>
+    <title>Örneklem Boyutu Hesaplayıcı – Diagnis AI Lab</title>
     <meta name="description" content="AI/ML araştırma projeniz için minimum örneklem boyutunu hesaplayın. Görev türü, karmaşıklık ve hedef doğruluk oranına göre öneriler alın.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -859,7 +859,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
@@ -1160,7 +1160,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
+            <strong>Diagnis AI Lab</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
             © 2026 Diagnis. Tüm hakları saklıdır.
         </p>
     </footer>
