--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Size Calculator – Diagnis Research Labs</title>
+    <title>Sample Size Calculator – Diagnis AI Lab</title>
     <meta name="description" content="Calculate the minimum sample size for your AI/ML research project. Get recommendations based on task type, complexity, and target accuracy.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -843,7 +843,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
@@ -1141,7 +1141,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
+            <strong>Diagnis AI Lab</strong> · A division of <a href="https://diagnis.ai">Diagnis Medical AI</a><br>
             © 2026 Diagnis. All rights reserved.
         </p>
     </footer>
