--- a/guide.html
+++ b/guide.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Araştırma Rehberi – Diagnis Research Labs</title>
+    <title>AI Araştırma Rehberi – Diagnis AI Lab</title>
     <meta name="description" content="Araştırmanızda AI kullanmak için adım adım rehber. AI fırsatlarını keşfedin, doğru modeli seçin, publication-ready sonuçlar alın.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1057,7 +1057,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
@@ -1639,7 +1639,7 @@
     </main>
 
     <footer>
-        <p class="footer-text">© 2025 Diagnis Research Labs — <a href="mailto:research@diagnis.ai">research@diagnis.ai</a></p>
+        <p class="footer-text">© 2025 Diagnis AI Lab — <a href="mailto:research@diagnis.ai">research@diagnis.ai</a></p>
     </footer>
 
     <script>
