--- a/research-finder-tr.html
+++ b/research-finder-tr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PubMed AI Araştırma Bulucu – Diagnis Research Labs</title>
+    <title>PubMed AI Araştırma Bulucu – Diagnis AI Lab</title>
     <meta name="description" content="Tıbbi alanınızdaki güncel yapay zeka ve makine öğrenmesi araştırmalarını bulun. PubMed'de en son AI destekli çalışmaları arayın.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -605,7 +605,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
@@ -717,7 +717,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
+            <strong>Diagnis AI Lab</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
             © 2026 Diagnis. Tüm hakları saklıdır.
         </p>
     </footer>
