--- a/why-ai-tr.html
+++ b/why-ai-tr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Araştırmanız için Neden Yapay Zeka? – Diagnis Research Labs</title>
+    <title>Araştırmanız için Neden Yapay Zeka? – Diagnis AI Lab</title>
     <meta name="description" content="Yapay zekanın akademik araştırmayı nasıl dönüştürdüğünü keşfedin. Daha yüksek atıf oranları, daha iyi fonlama fırsatları ve araştırmacılar için geleceğe yönelik beceriler.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -547,7 +547,7 @@
                         <path d="M2 12l10 5 10-5"/>
                     </svg>
                 </div>
-                <span>Diagnis Research Labs</span>
+                <span>Diagnis AI Lab</span>
             </a>
             <nav>
                 <a href="why-ai-tr.html" class="nav-link active">Neden AI?</a>
@@ -791,7 +791,7 @@
 
     <footer>
         <p class="footer-text">
-            <strong>Diagnis Research Labs</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
+            <strong>Diagnis AI Lab</strong> · <a href="https://diagnis.ai">Diagnis Medical AI</a>'ın bir bölümü<br>
             © 2026 Diagnis. Tüm hakları saklıdır.
         </p>
     </footer>
