feat: blog system + first AI medical news post

--- a/index.html
+++ b/index.html
@@ -986,12 +986,10 @@
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
                 <a href="#features" class="nav-link">Features</a>
                 <a href="team.html" class="nav-link">Team</a>
-                <a href="guide.html" class="nav-link">📚 AI Guide</a>
-                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
+                <a href="blog/" class="nav-link">Blog</a>
+                <a href="guide.html" class="nav-link">AI Guide</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
-                <a href="research-finder.html" class="nav-link">🔍 Research Finder</a>
-                <a href="calculator.html" class="nav-link">Calculator</a>
-                <a href="careers.html" class="nav-link">🚀 Careers</a>
+                <a href="careers.html" class="nav-link">Careers</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
         </div>
