--- a/tr.html
+++ b/tr.html
@@ -1002,9 +1002,9 @@
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="#features" class="nav-link">Özellikler</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
-                <a href="guide-tr.html" class="nav-link">📚 AI Rehberi</a>
-                <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
-                <a href="careers-tr.html" class="nav-link">🚀 Kariyer</a>
+                <a href="blog/" class="nav-link">Blog</a>
+                <a href="guide-tr.html" class="nav-link">AI Rehberi</a>
+                <a href="careers-tr.html" class="nav-link">Kariyer</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
                 </div>
